# master

Car__exercise/: CMakeLists.txt  Car.cpp  Car.h  Car__exercise.sln  Car__exercise.vcxproj  Car__exercise.vcxproj.filters  ElectricCar.cpp  ElectricCar.h  Observer.cpp  Observer.h  Sport_car_unit_test.cpp  SportsCar.cpp  SportsCar.h  VehicleUtils.cpp  VehicleUtils.h  cpp.hint  main.cpp
Car__exercise/Car__exercise/x64/Debug/: Car__exercise.exe.recipe  Car__exercise.ilk  vc145.idb
Car__exercise/Car__exercise/x64/Debug/Car__exercise.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Car__exercise.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Singleton_task3/: Singleton_task3.slnx
Singleton_task3/Singleton_task3/: Singleton_task3.vcxproj  Source.cpp
Singleton_task3/Singleton_task3/x64/Debug/: Singleton_task3.exe.recipe  Singleton_task3.ilk  vc145.idb
Singleton_task3/Singleton_task3/x64/Debug/Singleton_task3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Singleton_task3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
SmartPointer/: SmartPointer.sln
SmartPointer/SmartPointer/: SmartPointer.vcxproj  Source.cpp
Task4_multithread/: Task4_multithread.slnx
Task4_multithread/Task4_multithread/: Global.h  Source.cpp  Task4_multithread.vcxproj  Task4_multithread.vcxproj.filters
Task4_multithread/Task4_multithread/x64/Debug/: Task4_multithread.exe.recipe  Task4_multithread.ilk  vc145.idb
(+20 files in other folders)
